<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="data_not_found">No data available</string>
    <string name="retry">Retry</string>
    <string name="some_error_occurred">Some error occurred</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_brand_name">Enter brand name</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_price">Enter price</string>
    <string name="save_product">save</string>
    <string name="product_price">%s %s</string>
</resources>